--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "core-js": "^3.19.3",
         "nuxt": "^2.15.8",
         "vue": "^2.6.14",
-        "vue-intersection-observer": "^0.1.9",
+        "vue-intersect": "^1.1.6",
         "vue-server-renderer": "^2.6.14",
         "vue-template-compiler": "^2.6.14",
         "webpack": "^4.46.0"
