--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-nuxt": "^3.1.0",
         "eslint-plugin-vue": "^8.2.0",
+        "flag-icons": "^6.6.4",
         "nuxt-windicss": "^2",
         "prettier": "^2.5.1"
     }
