--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
               run: npm run lint
 
             - name: Test build 🖥
-              run: npm run build
+              run: npm run generate
