--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
     "version": "0.2.0",
     "private": true,
     "scripts": {
-        "dev": "nuxt",
+        "dev": "nuxt dev",
         "build": "nuxt build",
-        "start": "nuxt start",
-        "generate": "nuxt generate",
-        "lint:js": "eslint --ext \".js,.ts,.vue\" .",
-        "lint:prettier": "prettier --check .",
-        "lint": "npm run lint:js && npm run lint:prettier",
-        "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
+        "preview": "nuxt preview",
+        "generate": "nuxt generate"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.9.1",
-        "nuxt": "3.0.0"
+        "bootstrap-icons": "^1.9.1"
     },
     "devDependencies": {
-        "flag-icons": "^6.6.4"
+        "flag-icons": "^6.6.4",
+        "nuxt": "3.0.0",
+        "nuxt-windicss": "^2.6.0"
     }
 }
