--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
 
         strategy:
             matrix:
-                os: [ubuntu-latest, windows-latest]
-                node: [14, 16]
+                os: [ubuntu-latest]
+                node: [16, 18]
 
         steps:
             - name: Checkout 🛎
@@ -31,15 +31,12 @@ jobs:
               uses: actions/cache@v2.1.4
               with:
                   path: ~/.npm
-                  key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
                   restore-keys: |
                       ${{ runner.os }}-node-
 
             - name: Install dependencies 👨🏻‍💻
-              run: npm ci --prefer-offline --no-audit
-
-            - name: Run linter 👀
-              run: npm run lint
+              run: yarn install --frozen-lockfile --prefer-offline --no-audit
 
             - name: Test build 🖥
               run: npm run generate
